--- a/explore.html
+++ b/explore.html
@@ -25,21 +25,21 @@
     <!-- SLIDER -->
     <div class="slider-wrap">
         <div class="slider-track">
-            <img src="assets/sunken-cemetery-camiguin-old-cross-underwater-1080x720.jpg" alt="Sunken Cemetery" class="slide">
-            <img src="assets/camiguin-White-Island-with-Hibok-Hibok-as-background.jpeg" alt="White Island" class="slide">
-            <img src="assets/34-camiguin-island-main-banner2.jpg" alt="Camiguin Island" class="slide">
+            <img src="assets/ceviche-kinilaw.jpg" alt="Sunken Cemetery" class="slide">
+            <img src="assets/mantigue-island-camiguin-aerial.jpg" alt="White Island" class="slide">
+            <img src="assets/gui-ob-church-ruins.jpg" alt="Camiguin Island" class="slide">
             <img src="assets/katunggan-park-camiguin-huts.jpg" alt="Katunggan Park" class="slide">
         </div>
 
         <div id="main-caption" class="main-caption">
-            Experience and Explore Camiguin
+        Explore Camiguin
         </div>
 
         <div class="caption-track">
-            <div id="slider-caption1" class="slider-caption">Sunken Cemetery, Camiguin</div>
-            <div id="slider-caption2" class="slider-caption">White sandbar, Camiguin</div>
-            <div id="slider-caption3" class="slider-caption">Camiguin Island, Philippines</div>
-            <div id="slider-caption4" class="slider-caption">Katunggan Park, Camiguin</div>
+            <div id="slider-caption1" class="slider-caption">Food and delicacies</div>
+            <div id="slider-caption2" class="slider-caption">Beach and Relax</div>
+            <div id="slider-caption3" class="slider-caption">History & Culture</div>
+            <div id="slider-caption4" class="slider-caption">Experience</div>
         </div>
     </div>
 
@@ -90,7 +90,7 @@
             <!-- Nature & Adventure -->
             <div class="col-md-4 attraction-card" data-category="nature">
                 <div class="card">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/4/4b/White_Island_Camiguin.jpg" alt="White Island" class="card-img-top">
+                    <img src="assets/camiguin-White-Island-with-Hibok-Hibok-as-background.jpeg" alt="White Island" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">White Island</h5>
                         <p class="card-text">A stunning sandbar with panoramic sea and mountain views. Perfect for photography and sunset watching.</p>
@@ -100,7 +100,7 @@
 
             <div class="col-md-4 attraction-card" data-category="nature">
                 <div class="card">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/6/65/Katibawasan_Falls_Camiguin.jpg" alt="Katibawasan Falls" class="card-img-top">
+                    <img src="assets/katibawasan-falls.jpeg" alt="Katibawasan Falls" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Katibawasan Falls</h5>
                         <p class="card-text">Majestic waterfall with cool, refreshing water. Great for swimming and nature walks.</p>
@@ -110,19 +110,21 @@
 
              <div class="col-md-4 attraction-card" data-category="nature">
                 <div class="card">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/4/4b/White_Island_Camiguin.jpg" alt="White Island" class="card-img-top">
+                    <img src="assets/hibok-hibok-crater-lake-1024x576.jpg" alt="Mt Hibok-Hibok crater" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Mt.Hibok-Hibok</h5>
-                        <p class="card-text">A stunning sandbar with panoramic sea and mountain views. Perfect for photography and sunset watching.</p>
+                        <p class="card-text">An active volcano offering a moderate hike with breathtaking views of the island and sea.</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 attraction-card" data-category="nature">
                 <div class="card">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/4/4b/White_Island_Camiguin.jpg" alt="White Island" class="card-img-top">
+                    <img src="assets/Sunken-Cemetery-Camiguin-Mindanao.jpg" alt="Sunken Cemetery" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Sunken Cemetery</h5>
-                        <p class="card-text">A stunning sandbar with panoramic sea and mountain views. Perfect for photography and sunset watching.</p>
+                        <p class="card-text">A hauntingly beautiful site where crosses emerge from the sea, remnants of a
+                             19th-century volcanic eruption. Best visited at sunrise or sunset, it offers 
+                            serene boat rides, photography, and a glimpse into Camiguin’s history..</p>
                     </div>
                 </div>
             </div>
@@ -130,46 +132,46 @@
             <!-- Beaches & Relaxation -->
             <div class="col-md-4 attraction-card" data-category="beach">
                 <div class="card">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/0/0f/Mantigue_Island_Camiguin.jpg" alt="Mantigue Island" class="card-img-top">
+                    <img src="assets/mantigue-island-camiguin-aerial-1080x810.jpg" alt="Mantigue Island" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Mantigue Island</h5>
-                        <p class="card-text">White sand, crystal-clear waters, snorkeling, and relaxing sunbathing spots. Accessible via a short boat ride.</p>
+                        <p class="card-text">White sandy beaches with clear water and vibrant marine life. The island is ideal for relaxation and short trekking.</p>
                     </div>
                 </div>
             </div>
 
             <div class="col-md-4 attraction-card" data-category="beach">
                 <div class="card">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/0/0f/Mantigue_Island_Camiguin.jpg" alt="Mantigue Island" class="card-img-top">
+                    <img src="assets/Bura-Soda-Water-Park-Camiguin-Island-Philippines.jpeg" alt="Bura Soda Water park" class="card-img-top">
                     <div class="card-body">
-                        <h5 class="card-title">Soda Springs/ Arden hot Springs</h5>
-                        <p class="card-text">White sand, crystal-clear waters, snorkeling, and relaxing sunbathing spots. Accessible via a short boat ride.</p>
+                        <h5 class="card-title">Bura Soda Water Park</h5>
+                        <p class="card-text">A unique natural spring in Catarman, Camiguin, where you can dip in cool, mineral-rich waters surrounded by 
+                            lush greenery. Perfect for swimming, picnics, and a relaxing day close to nature.</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 attraction-card" data-category="beach">
                 <div class="card">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/0/0f/Mantigue_Island_Camiguin.jpg" alt="Mantigue Island" class="card-img-top">
+                    <img src="assets/katunggan-park-camiguin-huts.jpg" alt="Katunggan Park" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Katunggan Park</h5>
-                        <p class="card-text">White sand, crystal-clear waters, snorkeling, and relaxing sunbathing spots. Accessible via a short boat ride.</p>
+                        <p class="card-text">A tranquil mangrove sanctuary with wooden boardwalks and huts over clear coastal waters — perfect for nature walks and gentle swimming</p>
                     </div>
                 </div>
             </div>
             <div class="col-md-4 attraction-card" data-category="beach">
                 <div class="card">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/0/0f/Mantigue_Island_Camiguin.jpg" alt="Mantigue Island" class="card-img-top">
+                    <img src="assets/cantaan-guinsiliban-camiguin-v0-pzg8r4eyrs1e1.jpeg" alt="Guinsiliban" class="card-img-top">
                     <div class="card-body">
-                        <h5 class="card-title">Hibok-Hibok Beach</h5>
-                        <p class="card-text">White sand, crystal-clear waters, snorkeling, and relaxing sunbathing spots. Accessible via a short boat ride.</p>
+                        <h5 class="card-title">Guinsiliban beach</h5>
+                        <p class="card-text">A quiet coastal spot with calm waters, perfect for a relaxed swim and scenic sunset views.</p>
                     </div>
                 </div>
             </div>
-
             <!-- History & Culture -->
             <div class="col-md-4 attraction-card" data-category="history">
                 <div class="card">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Guiob_Church_Ruins_Camiguin.jpg" alt="Gui-ob Church Ruins" class="card-img-top">
+                    <img src="assets/gui-ob-church-ruins.jpg" alt="Gui-ob Church Ruins" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Gui-ob Church Ruins</h5>
                         <p class="card-text">Remains of a historic church destroyed by volcanic eruption, surrounded by scenic views.</p>
@@ -179,28 +181,30 @@
 
               <div class="col-md-4 attraction-card" data-category="history">
                 <div class="card">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Guiob_Church_Ruins_Camiguin.jpg" alt="Gui-ob Church Ruins" class="card-img-top">
+                    <img src="assets/Pasalubong.jpg" alt="Mambajao Pasalubong" class="card-img-top">
                     <div class="card-body">
-                        <h5 class="card-title">Old Spanish Churches</h5>
-                        <p class="card-text">Remains of a historic church destroyed by volcanic eruption, surrounded by scenic views.</p>
+                        <h5 class="card-title">Local Crafts & Handicrafts Centers</h5>
+                        <p class="card-text">Discover woven mats, baskets, and coconut-based crafts while learning about Camiguin’s traditional artistry.</p>
                     </div>
                 </div>
             </div>
               <div class="col-md-4 attraction-card" data-category="history">
                 <div class="card">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Guiob_Church_Ruins_Camiguin.jpg" alt="Gui-ob Church Ruins" class="card-img-top">
-                    <div class="card-body">
-                        <h5 class="card-title">Camiguin Museum</h5>
-                        <p class="card-text">Remains of a historic church destroyed by volcanic eruption, surrounded by scenic views.</p>
-                    </div>
-                </div>
-            </div>
-              <div class="col-md-4 attraction-card" data-category="history">
-                <div class="card">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/2/2f/Guiob_Church_Ruins_Camiguin.jpg" alt="Gui-ob Church Ruins" class="card-img-top">
+                    <img src="assets/sunken-cemetery.jpg" alt="Gui-ob Church Ruins" class="card-img-top">
                     <div class="card-body">
                         <h5 class="card-title">Sunken Cemetery Marker</h5>
                         <p class="card-text">Remains of a historic church destroyed by volcanic eruption, surrounded by scenic views.</p>
+                    </div>
+                </div>
+            </div>
+              <div class="col-md-4 attraction-card" data-category="history">
+                <div class="card">
+                    <img src="assets/The_Corrales_Ancestral_House_and_the_125_Pili_Nut_Tree_with_Marker_2.jpg" alt="Casa Corrales" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Casa Corrales de Camiguin</h5>
+                        <p class="card-text">a preserved ancestral home in Mambajao, honored as an Important Cultural Property. 
+                            Walk through its historic halls and feel the legacy of old‑time Camiguin, an intimate glimpse of the island’s 
+                            past amid quiet, timeless surroundings.</p>
                     </div>
                 </div>
             </div>
@@ -208,16 +212,71 @@
             <!-- Food & Local Delights -->
             <div class="col-md-4 attraction-card" data-category="food">
                 <div class="card">
-                    <img src="https://upload.wikimedia.org/wikipedia/commons/2/2c/Camiguin_Pastel.jpg" alt="Camiguin Pastel" class="card-img-top">
+                    <img src="assets/Pastel_de_camiguin.jpg" alt="Camiguin Pastel" class="card-img-top">
                     <div class="card-body">
-                        <h5 class="card-title">Camiguin Pastel</h5>
+                        <h5 class="card-title">Pastel De Camiguin</h5>
                         <p class="card-text">Sweet soft pastries filled with custard or yema. A must-try local delicacy.</p>
+                        <p class="card-text">Where: Pastry Shops around Mambajao</p>
                     </div>
                 </div>
             </div>
+
+            <div class="col-md-4 attraction-card" data-category="food">
+                <div class="card">
+                    <img src="assets/lansone.jpg.webp" alt="lanzones" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Lanzones</h5>
+                        <p class="card-text">Sweet and juicy fruit celebrated in the annual festival; try fresh or in jams and preserves.”</p>
+                        <p class="card-text">Where: Local fruit stalls in Sagay (especially during October’s Lanzones Festival)</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 attraction-card" data-category="food">
+                <div class="card">
+                    <img src="assets/CDO-picture-1.jpg" alt="Seafoods" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Fresh Seafoods</h5>
+                        <p class="card-text">Grilled fish, shrimp, lobster, and kinilaw made from the day’s fresh catch..</p>
+                        <p class="card-text"> Where: Guinsiliban Seafood Grill, Catarman beachside restaurants</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-md-4 attraction-card" data-category="food">
+                <div class="card">
+                    <img src="assets/nanaw-cafe-camiguin-1-1024x768.jpg" alt="Coffee" class="card-img-top">
+                    <div class="card-body">
+                        <h5 class="card-title">Local Coffee</h5>
+                        <p class="card-text">Brewed from locally grown beans — perfect for coffee enthusiasts.</p>
+                        <p class="card-text">Where: Coffee shops around Mambajao town </p>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </div>
     </div>
+    
+     <section id="contact" class="contact-section">
+  <h2>Interested? Send us a message</h2>
+  <div class="inqform">
+     <form id="inquiryForm">
+    <label for="name">Name:</label>
+    <input type="text" id="name" placeholder="Your Name" required>
+
+    <label for="email">Email:</label>
+    <input type="email" id="email" placeholder="Your Email" required>
+
+    <label for="message">Message:</label>
+    <textarea id="message" placeholder="Write your message here..." required></textarea>
+
+    <button type="submit">Send Message</button>
+    <div class="prompt-message"></div>
+  </form>
+  </div>
+ 
+    </section>
      <footer class="footer">
     <div class="footer-container">
 
