--- a/index.html
+++ b/index.html
@@ -124,6 +124,25 @@
         </div>
     </section>
     <!-- MAIN CONTENT -->
+    <section id="contact" class="contact-section">
+  <h2>Interested? Send us a message</h2>
+  <div class="inqform">
+     <form id="inquiryForm">
+    <label for="name">Name:</label>
+    <input type="text" id="name" placeholder="Your Name" required>
+
+    <label for="email">Email:</label>
+    <input type="email" id="email" placeholder="Your Email" required>
+
+    <label for="message">Message:</label>
+    <textarea id="message" placeholder="Write your message here..." required></textarea>
+
+    <button type="submit">Send Message</button>
+    <div class="prompt-message"></div>
+  </form>
+  </div>
+ 
+    </section>
 
     <!-- FOOTER -->
     <footer class="footer">
@@ -161,6 +180,7 @@
         <p>© 2024 Camiguin Island Guide — All Rights Reserved</p>
     </div>
 </footer>
+
     <script src="index.js"></script>
 
 </body>
