--- a/travel-guide.html
+++ b/travel-guide.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheet.css">
-    <title>Document</title>
+    <title>Travel Guide</title>
 </head>
 <body>
     <header id="navBar">
@@ -87,43 +87,59 @@ Camiguin is known as the “Island Born of Fire” because it was shaped by volc
     </div>
 </div>
 
+    <section id="contact" class="contact-section">
+  <h2>Interested? Send us a message</h2>
+  <div class="inqform">
+     <form id="inquiryForm">
+    <label for="name">Name:</label>
+    <input type="text" id="name" placeholder="Your Name" required>
 
-      
+    <label for="email">Email:</label>
+    <input type="email" id="email" placeholder="Your Email" required>
 
-            <footer class="footer">
-    <div class="footer-container">
+    <label for="message">Message:</label>
+    <textarea id="message" placeholder="Write your message here..." required></textarea>
 
-        <div class="footer-section">
-            <h3>Camiguin Travel Guide</h3>
-            <p>Your gateway to the Island Born of Fire. Discover the best destinations,
-               activities, food, and culture that Camiguin has to offer.</p>
-        </div>
+    <button type="submit">Send Message</button>
+    <div class="prompt-message"></div>
+  </form>
+  </div>
+  </section>
+   <footer class="footer">
+            <div class="footer-container">
 
-        <div class="footer-section">
-            <h4>Quick Links</h4>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="explore.html">Where to Go</a></li>
-                <li><a href="things-to-do.html">Things to Do</a></li>
-                <li><a href="about.html">About Camiguin</a></li>
-                <li><a href="travel-guide.html">Travel Guide</a></li>
-            </ul>
-        </div>
+                <div class="footer-section">
+                    <h3>Camiguin Travel Guide</h3>
+                    <p>Your gateway to the Island Born of Fire. Discover the best destinations,
+                        activities, food, and culture that Camiguin has to offer.</p>
+                </div>
 
-        <div class="footer-section">
-            <h4>Follow Us</h4>
-            <ul class="socials">
-                <li><a href="#">Facebook</a></li>
-                <li><a href="#">Instagram</a></li>
-                <li><a href="#">YouTube</a></li>
-            </ul>
-        </div>
+                <div class="footer-section">
+                    <h4>Quick Links</h4>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="explore.html">Where to Go</a></li>
+                        <li><a href="things-to-do.html">Things to Do</a></li>
+                        <li><a href="about.html">About Camiguin</a></li>
+                        <li><a href="travel-guide.html">Travel Guide</a></li>
+                    </ul>
+                </div>
 
-    </div>
+                <div class="footer-section">
+                    <h4>Follow Us</h4>
+                    <ul class="socials">
+                        <li><a href="#">Facebook</a></li>
+                        <li><a href="#">Instagram</a></li>
+                        <li><a href="#">YouTube</a></li>
+                    </ul>
+                </div>
 
-    <div class="footer-bottom">
-        <p>© 2024 Camiguin Island Guide — All Rights Reserved</p>
-    </div>
-</footer>
+            </div>
+
+            <div class="footer-bottom">
+                <p>© 2024 Camiguin Island Guide — All Rights Reserved</p>
+            </div>
+        </footer>
+        <script src="index.js"></script>
 </body>
 </html> 
